--- a/css/selectors.css
+++ b/css/selectors.css
@@ -43,11 +43,32 @@ div {
 
 /* All siblings */
 h1 ~ h2 {
-  color: blue;
-  font-family: calibri;
+  font-family: monospace;
 }
 
 /* All direct siblings */
 h1 + h2 {
   color: red;
+}
+
+/************* PSUEDO SELECTORS ***************/
+.card-1:hover {
+  background-color: black;
+}
+input:focus {
+  background-color: rgb(0, 0, 0);
+  color: #fff;
+  width: 100%;
+  height: 60px;
+}
+
+ul li:nth-child(even) {
+  font-family: sans-serif;
+  font-size: xx-large;
+  color: chocolate;
+}
+
+p::selection {
+  background-color: rgb(182, 5, 5);
+  color: #fff;
 }
