--- a/css/login.css
+++ b/css/login.css
@@ -44,6 +44,7 @@ body {
   font-size: 0.9rem;
   border-radius: 4px;
   border: 1px solid lightgrey;
+  transition: all 0.3s ease;
 }
 
 .container > form > .form-group > .form-input:focus {
@@ -62,8 +63,16 @@ body {
   color: #fff;
   cursor: pointer;
   margin-bottom: 20px;
+  outline: none;
+  transition: all 0.2s linear;
+  /* -webkit-transition: all 2s linear;
+  -moz-transition: all 2s linear; */
 }
 
 .container > form > .form-group > #login-btn:hover {
-  background-color: rgb(85, 3, 85);
+  background-color: rgb(99, 2, 99);
+}
+
+.container > form > .form-group > #login-btn:focus {
+  box-shadow: 3px 6px 20px rgb(0, 0, 0);
 }
