--- a/navbar.css
+++ b/navbar.css
@@ -39,17 +39,19 @@ nav .nav-menu {
   flex-basis: 60%;
   height: 100%;
   margin-top: 0;
-  list-style-type: none;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 nav .nav-menu li {
+  list-style-type: none;
+
   height: 100%;
   line-height: 60px;
   flex-basis: 20%;
   text-align: center;
+  background-color: #2475b0;
 }
 
 nav .nav-menu li a {
@@ -60,6 +62,19 @@ nav .nav-menu li a {
   transition: all 0.3s ease;
 }
 
-nav .nav-menu li:hover a:nth-child(odd) {
+nav .nav-menu li a:hover {
   background-color: #1b5783;
+}
+
+.dropdown-menu {
+  opacity: 0;
+  transform: translateY(30px);
+}
+
+nav .nav-menu li:hover .dropdown-menu {
+  transform: translateY(0);
+  transition: all 0.3s ease;
+  opacity: 1;
+  padding-inline-start: 0;
+  box-shadow: 0px 0px 15px rgb(155, 155, 155);
 }
